# ByteBuilder

./: .gitignore  README.md  flake.nix  meson.build  start.sh
include/bytebuilder/: args.h  filesize.h  pattern.h  progress.h  random.h  sparse.h  util.h  verify.h  writer.h
src/: args.cpp  filesize.cpp  main.cpp  pattern.cpp  progress.cpp  random.cpp  sparse.cpp  util.cpp  verify.cpp  writer.cpp
tests/: meson.build  test_args.cpp  test_filesize.cpp  test_pattern.cpp  test_random.cpp
